Color and font updates

--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<div class="grafica color1" data-waffly-title="FIBA 320" data-waffly-value="90,5698989%">Tooltip</div>
+	<div class="grafica color1" data-waffly-title="Waffly (Jquery plugin)" data-waffly-value="57,142857143%">Tooltip</div>
 
 	<script src="jquery.min.js"></script>
 	<script src="jquery.waffly.js"></script>
@@ -14,10 +14,13 @@
 	<script>
 	$(document).ready(function() {
 		$('.grafica').waffly({
-			graph_width: 200,
-			dot_gap: 6,
-			default_color:'#fc0',
-			graph_color:'#f90',
+			graph_width: 250,
+			dot_gap: 3,
+			dot_radius:'3px',
+			graph_color:'#07c',
+			graph_title_color:'#07c',
+			graph_value_color:'#888',
+			dot_opacity:.4,
 		});
 	});
 	</script>
